--- a/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
+++ b/KGERP/Views/BillRequisition/BillRequisitionMasterList.cshtml
@@ -84,15 +84,15 @@
                             <table id="KgErpDataTable" class="table table-striped table-dark table-responsive">
                                 <thead>
                                     <tr>
-                                        <th>SL</th>
-                                        <th>Date</th>
-                                        <th>Requisition No</th>
-                                        <th>Requisition Type</th>
-                                        <th>Project Name</th>
-                                        <th>Total</th>
-                                        <th>Status</th>
-                                        <th>Action</th>
-                                        <th>Report</th>
+                                        <th width="3%">SL</th>
+                                        <th width="10%">Date</th>
+                                        <th width="16%">Requisition No</th>
+                                        <th width="15%">Requisition Type</th>
+                                        <th width="25%">Project Name</th>
+                                        <th width="8%">Amount</th>
+                                        <th width="10%">Status</th>
+                                        <th width="8%">Action</th>
+                                        <th width="5%">Report</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -113,7 +113,11 @@
                                         <tr>
                                             <th>@(++sl)</th>
                                             <td>@item.BRDate.ToString("dd-MM-yyyy")</td>
-                                            <td>@item.BillRequisitionNo</td>
+                                            <td>
+                                                <a class="text-primary" target="_blank" href="~/Report/TCLBillRequisiontReport?companyId=@item.CompanyFK&billRequisitionMasterId=@item.BillRequisitionMasterId">
+                                                    @item.BillRequisitionNo
+                                                </a>
+                                            </td>
                                             <td>@item.BRTypeName</td>
                                             <td>@item.CostCenterName</td>
                                             <td>@String.Format("{0:0.00}", item.TotalAmount)</td>
